adding new activity in order to make use of SQLite

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,40 +61,17 @@
             android:layout_marginBottom="20dp"
             />
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/monthly_budget"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="20">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="19"
-                android:text="$"
-                android:textColor="@android:color/white"
-                android:textSize="30sp"/>
-
-            <com.rengwuxian.materialedittext.MaterialEditText
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:id="@+id/monthBudget"
-                android:hint="Enter Budget"
-                android:textColorHint="@android:color/white"
-                android:textColor="@android:color/white"
-                android:textSize="30sp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginBottom="20dp"
-                android:inputType="numberDecimal"
-                app:met_baseColor="@android:color/white"
-                app:met_primaryColor="@android:color/white"
-                app:met_singleLineEllipsis="false"
-                />
-
-        </LinearLayout>
-
+            android:gravity="center"
+            android:textColorHint="@android:color/white"
+            android:text="Edit budget to begin"
+            android:textColor="@android:color/white"
+            android:textSize="34sp"
+            android:layout_marginBottom="20dp"
+            />
 
         <TextView
             android:id="@+id/dailyExp"
@@ -108,16 +85,40 @@
 
     </LinearLayout>
 
-    <android.support.v7.widget.AppCompatButton
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_marginRight="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_alignParentBottom="true"
         android:layout_height="wrap_content"
-        android:id="@+id/btnCalculate"
-        android:text="Process"
-        android:textColor="@android:color/white"
-        android:layout_margin="8dp"
-        android:background="@color/btnSignActive" />
+        android:layout_weight="10"
+        android:layout_alignParentBottom="true">
+
+        <android.support.v7.widget.AppCompatButton
+            android:layout_width="0dp"
+            android:layout_weight="5"
+            android:layout_height="wrap_content"
+
+            android:layout_marginRight="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_alignParentBottom="true"
+            android:id="@+id/btnCalculate"
+            android:text="Process"
+            android:textColor="@android:color/white"
+            android:layout_margin="8dp"
+            android:background="@color/btnSignActive" />
+
+        <android.support.v7.widget.AppCompatButton
+            android:layout_width="0dp"
+            android:layout_weight="5"
+            android:layout_marginRight="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_alignParentBottom="true"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnEdit"
+            android:text="Edit Budget"
+            android:textColor="@android:color/white"
+            android:layout_margin="8dp"
+            android:background="@color/btnSignActive" />
+
+    </LinearLayout>
+
 
 </RelativeLayout>
